ADDED instructions to readme file